[gd_scene load_steps=5 format=3 uid="uid://dmm0n7r3uf1oi"]

[ext_resource type="Script" uid="uid://c0ng0ja6jn8sy" path="res://scripts/game_ui.gd" id="1_yubou"]
[ext_resource type="Texture2D" uid="uid://ciq3et03rd6wv" path="res://assets/settings.png" id="2_rns2u"]
[ext_resource type="Theme" uid="uid://dilljg56fyeij" path="res://styles/text.tres" id="2_u001w"]
[ext_resource type="Theme" uid="uid://cmx0sw68bgwxm" path="res://styles/button_style.tres" id="5_bt76a"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yubou")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Points Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_u001w")
theme_override_font_sizes/font_size = 48
text = "SCORE:"

[node name="Points" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_u001w")
theme_override_font_sizes/font_size = 48
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Pause Button" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
texture_normal = ExtResource("2_rns2u")

[node name="PauseMenu" type="MarginContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
color = Color(0.09411765, 0.09411765, 0.14509805, 0.8352941)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_u001w")
theme_override_font_sizes/font_size = 48
text = "Pause Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="resume" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_bt76a")
text = "Resume"

[node name="quit" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_bt76a")
text = "Quit"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Pause Button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
